# botForge

./: AGENTS.md  CHANGELOG.md  Cargo.toml  ISSUES.md  LEFTOVERS.md  README.md
.github/workflows/: compile.yml
crates/botforge-runtime/: Cargo.toml
crates/botforge-runtime/migrations/: 0001_retention_governance.sql  0002_core_storage.sql  0003_cryer_campaigns.sql
crates/botforge-runtime/src/: lib.rs
crates/botforge-runtime/src/features/: mod.rs
crates/botforge-runtime/src/features/bard/: mod.rs
crates/botforge-runtime/src/features/squire/: mod.rs
crates/botforge-runtime/tests/: architecture_flow.rs  chamber_host_guardrails.rs  feature_modules.rs  policy_engine.rs  setup_engine.rs
crates/botforge-spec/: Cargo.toml
crates/botforge-spec/docs/: manifest-schema.md  schema-compatibility-spec.md
crates/botforge-spec/examples/: bot-manifest.json  feature-manifest.json  platform-manifest.json
crates/botforge-spec/src/: lib.rs
crates/botforge-spec/tests/: schema_validation.rs
docs/: architecture.md  implementation-roadmap.md  platform_modules.md
docs/design/: botforge-runtime-platform-modules-rampart.md  chamber-host-functions-security-spec.md  cryer-campaign-storage-and-setup.md  repository-informed-migration.md  runtime-policy-evaluation.md
docs/governance/: retention-governance-security-policy.md
