[package]
name = "botforge-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
botforge-spec = { path = "../botforge-spec" }
serde_json = "1"

[lib]
path = "src/lib.rs"
